@@ -1,0 +1,6 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <body>
+    <p id="one">one</p>
+    <p id="two">two</p>
+  </body>
+</html>
