@@ -1,0 +1,7 @@
+<html>
+<body>
+  <h1>Title</h1>
+  <div id="alpha"></div>
+  <div id="beta"></div>
+</body>
+</html>
