@@ -4,6 +4,8 @@ Changelog
 1.0b3 - unreleased
 ------------------
 
+* Filter out additional xmlns with notheme.
+
 1.0b2 - 2011-04-27
 ------------------
 
